force-app/main/default/objects/ucinn_ascendv2__Tribute__c/ucinn_ascendv2__Tribute__c.object-meta.xml
<CustomObject>
    <description>A constituent that a donation is made in relation to.</description>
    <label>Tribute</label>
    <nameField>
        <label>Tribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>