force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Text__c</fullName>
    <label>Constituent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>