force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Notify_Address__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Notify_Address__c</fullName>
    <label>Notify Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>