force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Notify_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Notify_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tributes (Notify Contact)</relationshipLabel>
    <relationshipName>Tributes_Notify_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>