force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Notify_Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Notify_Contact_Text__c</fullName>
    <label>Notify Constituent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>