force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge / Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tributes</relationshipLabel>
    <relationshipName>Tributes_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>