force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Payment_Group__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Group</label>
    <referenceTo>ucinn_ascendv2__Payment_Group__c</referenceTo>
    <relationshipLabel>Tributes</relationshipLabel>
    <relationshipName>Tributes_Payment_Group</relationshipName>
    <type>Lookup</type>
</CustomField>