force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Payment_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Group_ID__c</fullName>
    <externalId>true</externalId>
    <label>Payment Group ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>