force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Review_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Transaction</label>
    <referenceTo>ucinn_ascendv2__Review_Transaction__c</referenceTo>
    <relationshipLabel>Tributes</relationshipLabel>
    <relationshipName>Tributes_Review_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>