force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Tribute_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tribute_Name_Auto_Number__c</fullName>
    <displayFormat>Tribute-{YY}{MM}{DD}-{0000}</displayFormat>
    <label>Tribute Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>