force-app/main/default/objects/ucinn_ascendv2__Tribute__c/fields/ucinn_ascendv2__Tribute_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tribute_Type__c</fullName>
    <label>Tribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Honor of</fullName>
            </value>
            <value>
                <fullName>In Memory of</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>