force-app/main/default/objects/ucinn_ascendv2__Tribute__c/validationRules/ucinn_ascendv2__Check_In_Honor_Of_Is_Alive.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Check_In_Honor_Of_Is_Alive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Is_Deceased__c,
ISPICKVAL(ucinn_ascendv2__Tribute_Type__c, &quot;In Honor of&quot;))</errorConditionFormula>
    <errorMessage>Cannot create a Tribute with type &quot;In Honor of&quot; when a constituent is deceased.</errorMessage>
</ValidationRule>