force-app/main/default/objects/ucinn_ascendv2__Tribute__c/validationRules/ucinn_ascendv2__Check_In_Memory_Of_Is_Deceased.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Check_In_Memory_Of_Is_Deceased</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Is_Deceased__c),
    ISPICKVAL(ucinn_ascendv2__Tribute_Type__c, &quot;In Memory of&quot;) )</errorConditionFormula>
    <errorMessage>Constituent must be deceased for a tribute to have status &quot;In Memory Of.&quot;</errorMessage>
</ValidationRule>